--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ p {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+    justify-content:
    /* align-items: center; */
 }
 
@@ -121,23 +122,24 @@ p {
     height: 300px;
     width: auto;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    align-content: center;
+    justify-content: space-around;
+    /*align-items: flex-start;*/
+    align-items: center;
+    align-content:center;
     flex-direction: row; /* direction of boxes */
-    gap: 60px; /*display space between boxes */
+    gap: 30px; /*display space between boxes */
     margin-bottom: 20px;
      
 }
-.box-1,.box-2{/*children*/
+.box-1,.box-2,.box-3{/*children*/
     height: 300px;
     background-color: #8363a7;
-    width: 300px;
+    width: 250px;
     border: 2px solid purple;
-    font-size: 18px;
+    font-size: 24px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bolder;
-    color: #ffffff;
+    color: rgb(47, 0, 255);
     display: flex;
     /*flex: 0 1 50%;*/
    /* align-self: flex-start; */
@@ -145,11 +147,13 @@ p {
 
  .box-1{
 background-image: url("./images/fashion_sat2.jpg"); 
+color: whitesmoke;
 /*flex: 2 1 20em;*/  
 }
 
 .box-2{
-    background-image: url("./images/perfect-night-in2.jpg"); 
+    background-image: url("./images/perfect-night-in2.jpg");
+    color: red; 
     /*flex-grow: 1; */
 } 
 
@@ -158,15 +162,15 @@ background-image: url("./images/fashion_sat2.jpg");
     /*flex-grow: 1; */
 } 
 
-.box-3,.box-4{ 
+.box-4{ 
     height: 300px;
     background-color: lightgray;
-    width: 300px;
+    width: 250px;
     border: 2px solid purple;
-    font-size: 18px;
+    font-size: 24px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bolder;
-    color: #ffffff;
+    color: darkolivegreen;
     display: flex;
     /*flex: 0 1 50%;*/
     /* align-self: flex-start; */
