font size in sections changed from 18 to 14

--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ a {
     text-decoration: none;
 }
 
-/* sub-headers text font size is defined */
+/* ssection text font size is defined */
 p {
-    font-size: 18px;
+    font-size: 14px;
 }
 
 /* top photo hero banner image formatting */
